# Physical-AI-Humanoid-Robotics-Textbook

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  turbo.json
.claude/: AGENT-SKILL-UPDATE-CHECKLIST.md  settings.local.json
.claude/skills/character-dev/: SKILL.md
.claude/skills/constitution-reader/: reference.md
.claude/skills/dialogue-generator/: SKILL.md
.claude/skills/layer-definitions/: layers.md
.gemini/: settings.json
.github/workflows/: deploy-docs.yml  deploy.yml
.specify/memory/: agent-index.md  architecture.md  constitution.md  curriculum.md  pedagogy.md  project-index.md
.specify/schemas/: chapter-frontmatter.schema.json
.specify/templates/: code-example-complete-template.py  code-example-skeleton-template.py
apps/auth/: .gitignore  SIGNUP-IMPLEMENTATION.md  next.config.js  next.config.ts  package.json  tailwind.config.ts  vercel-build.sh  vercel.json
apps/docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: docusaurus.config.js  package-lock.json  package.json
practice_project/: main.py  pyproject.toml
practice_project/my-book/: package-lock.json  sidebars.ts
rag-backend/app/: llm.py  main.py
specs/001-agents-skills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-chatbot/: plan.md  tasks.md
specs/002-monorepo-docusaurus-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-introduction-physical-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chatkit-tutor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-content-personalization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-better-auth-profile/: data-model.md  plan.md  quickstart.md  research.md
specs/006-betterauth-service/: data-model.md  notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+163 files in other folders)
