[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot Backend for Physical AI & Humanoid Robotics Textbook"
readme = "README.md"
authors = [{name = "Physical AI Team", email = "team@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openai>=1.3.8",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "langchain>=0.0.339",
    "langchain-openai>=0.0.5",
    "sentence-transformers>=2.2.2",
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-rapidjson>=1.12",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest-cov",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/your-org/physical-ai-humanoid-robotics-textbook"
Repository = "https://github.com/your-org/physical-ai-humanoid-robotics-textbook"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true